--- a/src/main/resources/templates/login/registration.html
+++ b/src/main/resources/templates/login/registration.html
@@ -1,67 +1,61 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
-<head>
-	<title>Registration Form</title>
-	<link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
-	<form th:action="@{/}" method="get">
-		<button class="btn btn-md btn-warning btn-block" type="Submit">Go To Login Page</button>
-	</form>	
-	
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<form autocomplete="off" action="#" th:action="@{/registration}" th:object="${user}" method="post" class="form-horizontal" role="form">
-					<h2>Registration Form</h2>
-					<div class="form-group">
-						<div class="col-sm-9">
-							<label th:if="${#fields.hasErrors('displayName')}" th:errors="*{displayName}" class="validation-message"></label>
-							<input type="text" th:field="*{displayName}" placeholder="Nickname" class="form-control" /> 
-						</div>
-					</div>
-					<!--
-					<div class="form-group">
-						<div class="col-sm-9">
-						<label	th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
-								class="validation-message"></label>
-							<input type="text" th:field="*{lastName}"
-								placeholder="Last Name" class="form-control" /> 
-						</div>
-					</div>  
-					-->
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="text" th:field="*{username}" placeholder="Username"
-								class="form-control" /> <label
-								th:if="${#fields.hasErrors('username')}" th:errors="*{username}"
-								class="validation-message"></label>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="password" th:field="*{password}"
-								placeholder="Password" class="form-control" /> <label
-								th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
-								class="validation-message"></label>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<div class="col-sm-9">
-							<button type="submit" class="btn btn-primary btn-block">Register User</button>
-						</div>
-					</div>
-					
-					<span th:utext="${successMessage}"></span>
-				</form>
-			</div>
+	<head>
+		<title>Log In</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<style>
+			.forma {
+				width:350px;
+			}
+			.centered {
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+			}
+			.toggle{
+				display:none
+			}
+			body {
+				padding:50px;
+			}
+			.fail_login_error {
+				width:300px;
+			}
+			.validation-message {
+				font-style: normal;
+				font-size: 12px;
+				color: #FF1C19;
+			}
+		</style>	
+	</head>
+	<body>
+		<div id="registracija" class="col-sm-6">
+			<h3>Register:</h3>
+			<form action="#" th:action="@{/register}" method="POST" class="forma" th:object="${user}">
+				<div class="form-group">
+					<label th:if="${#fields.hasErrors('displayName')}" 
+						th:errors="*{displayName}" class="validation-message"></label>
+					<input type="text" th:field="*{displayName}" placeholder="Nickname" 
+						id="displayName" name="displayName" class="form-control" />
+				</div>
+				<div class="form-group">
+					<label th:if="${#fields.hasErrors('username')}" 
+						th:errors="*{username}" class="validation-message"></label>
+					<input type="text" th:field="*{username}" placeholder="Username" 
+						id="username" name="username" class="form-control" />
+				</div>
+				<div class="form-group">
+					<label th:if="${#fields.hasErrors('password')}" 
+						th:errors="*{password}" class="validation-message"></label>
+					<input type="password" th:field="*{password}" placeholder="Password" 
+						id="password" name="password" class="form-control" />
+				</div>
+				<button class="btn btn-default centered" type="submit">Register</button>
+			</form>
+			<a href="/login">Go back to login page</a>
 		</div>
-	</div>
-
-</body>
+	</body>
 </html>
